--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:UI"
         mc:Ignorable="d"
-        Title="Launche - VSCode Launcher" Height="450" Width="800">
+        Title="Launche - VSCode Launcher" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
         
         <Label Content="Vscode Path" HorizontalAlignment="Left" Margin="24,20,0,0" VerticalAlignment="Top" Height="26" Width="75"/>
