--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -9,7 +9,12 @@
     <Grid>
         
         <Label Content="Vscode Path" HorizontalAlignment="Left" Margin="24,20,0,0" VerticalAlignment="Top" Height="26" Width="75"/>
-        <TextBox x:Name="VsCodePathTextBox" HorizontalAlignment="Left" Margin="31,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="289" ForceCursor="True"/>
-        <Button x:Name="VsCodePathOpenDialogButton" Content="Open Dialog" HorizontalAlignment="Left" Margin="335,45,0,0" VerticalAlignment="Top" Click="VsCodePathOpenDialogButton_Click"/>
+
+        <TextBox x:Name="VsCodePathTextBox" HorizontalAlignment="Left" Margin="31,46,0,0" TextWrapping="NoWrap" VerticalAlignment="Top" Width="289"  ForceCursor="True"/>
+        
+        <Button x:Name="VsCodePathOpenDialogButton" Content="Open Dialog" HorizontalAlignment="Left" Margin="215,21,0,0" VerticalAlignment="Top" Click="VsCodePathOpenDialogButton_Click"/>
+        
+        <Button x:Name="SaveVsCodePathButton" Content="Save" HorizontalAlignment="Left" Margin="291,21,0,0" VerticalAlignment="Top" Click="SaveVsCodePathButton_Click"/>
+        
     </Grid>
 </Window>
