add functionality to add new project path

--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -40,7 +40,7 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Project Path"  Width="75"  HorizontalAlignment="Left" Foreground="White"/>
-            <Button  Grid.Column="2" Content="Save" VerticalAlignment="Center" Click="SaveVsCodePathButton_Click" Height="20" Margin="0,0,5,0" />
+            <Button  Grid.Column="2" Content="Save" VerticalAlignment="Center" Click="btnSaveProjectPath_Click" Height="20" Margin="0,0,5,0" />
             <Button x:Name="btnOpenDialogProjectPath"  Grid.Column="1" Content="Open Dialog" Margin="0,0,8,0" VerticalAlignment="Center" Click="btnOpenDialogProjectPath_Click" Height="20"/>
         </Grid>
 
@@ -65,7 +65,7 @@
             <TextBox Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding ProjectPath}"  TextWrapping="NoWrap" VerticalAlignment="Top"  Height="18" />
         </Grid>
 
-        <ListView Grid.Row="5"   x:Name="lvProjectPaths" ItemsSource="{Binding ProjectPathModels}"  SelectionChanged="ProjectPathsList_SelectionChanged" Margin="0,0,0,10" >
+        <ListView Grid.Row="5"   x:Name="lvProjectPaths" ItemsSource="{Binding ProjectPathModels, UpdateSourceTrigger=PropertyChanged}"  SelectionChanged="ProjectPathsList_SelectionChanged" Margin="0,0,0,10" >
             <ListView.Resources>
                 <DataTemplate x:Key="Templ">
                     <TextBlock HorizontalAlignment="Left" Text="Name"/>
