--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -30,40 +30,79 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
-                <ColumnDefinition />
             </Grid.ColumnDefinitions>
 
             <Label
                 Grid.Column="0"
-                Width="75"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 Content="IDE Path"
                 Foreground="White" />
             <Button
-                x:Name="SaveVsCodePathButton"
-                Grid.Column="2"
-                Margin="0,0,5,0"
-                VerticalAlignment="Center"
-                Click="SaveVsCodePathButton_Click"
-                Content="Save" />
-            <Button
                 x:Name="VsCodePathOpenDialogButton"
                 Grid.Column="1"
+                Height="23"
                 Margin="0,0,8,0"
+                Padding="5,0,5,0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Center"
                 Click="VsCodePathOpenDialogButton_Click"
-                Content="Open Dialog" />
+                Content="Add new IDE Path">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="3" />
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
-
-        <TextBox
-            x:Name="VsCodePathTextBox"
-            Grid.Row="1"
-            Height="18"
-            VerticalAlignment="Center"
-            Text="{Binding VsCodePath, UpdateSourceTrigger=PropertyChanged}"
-            TextWrapping="NoWrap" />
-
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <ComboBox
+                x:Name="comboIDEPaths"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                Height="23"
+                DisplayMemberPath="Path"
+                Focusable="False"
+                IsEditable="True"
+                IsReadOnly="True"
+                ItemsSource="{Binding IdePathsModels, UpdateSourceTrigger=PropertyChanged}"
+                SelectedValue="{Binding SelectedIdePath, UpdateSourceTrigger=PropertyChanged}" />
+            <ComboBox
+                x:Name="comboAllowedTypes"
+                Grid.Column="3"
+                Grid.ColumnSpan="2"
+                Height="23"
+                Margin="5,0,0,0"
+                DisplayMemberPath=""
+                Focusable="False"
+                IsEditable="True"
+                IsReadOnly="True"
+                ItemsSource="{Binding AllowedTypes, UpdateSourceTrigger=PropertyChanged}"
+                SelectedValue="{Binding SelectedAllowedType, UpdateSourceTrigger=PropertyChanged}"
+                Text="Allowed Types" />
+            <Button
+                x:Name="btnDeleteIdePath"
+                Grid.Column="5"
+                Height="23"
+                Margin="5,0,0,0"
+                VerticalAlignment="Center"
+                Click="btnDeleteIdePath_Click"
+                Content="Delete">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="3" />
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </Grid>
         <Grid
             Grid.Row="2"
             Height="23"
@@ -87,7 +126,13 @@
                 Margin="0,0,5,0"
                 VerticalAlignment="Center"
                 Click="btnSaveProjectPath_Click"
-                Content="Save" />
+                Content="Save">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="3" />
+                    </Style>
+                </Button.Resources>
+            </Button>
             <Button
                 x:Name="btnOpenDialogProjectPath"
                 Grid.Column="1"
@@ -95,7 +140,13 @@
                 Margin="0,0,8,0"
                 VerticalAlignment="Center"
                 Click="btnOpenDialogProjectPath_Click"
-                Content="Open Dialog" />
+                Content="Open Dialog">
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="3" />
+                    </Style>
+                </Button.Resources>
+            </Button>
         </Grid>
 
         <Grid
